Style CSS form.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             method="post"
             id="pineapple-form"
           >
-            <div class="form-row">
+            <div class="form-row-1">
               <div class="input">
                 <label for="first-name">First Name</label><br />
                 <input
@@ -44,19 +44,6 @@
               </div>
 
               <div class="input">
-                <label for="last-name">Last Name</label><br />
-                <input
-                  type="text"
-                  name="last-name"
-                  id="last-name"
-                  placeholder="Squarepants"
-                  required
-                />
-              </div>
-            </div>
-
-            <div class="form-row">
-              <div class="input">
                 <label for="email">Email Address</label><br />
                 <input
                   type="email"
@@ -68,6 +55,28 @@
               </div>
 
               <div class="input">
+                <label for="password-1">Password</label> <br />
+                <input
+                  type="password"
+                  name="password-1"
+                  id="password-1"
+                  required
+                />
+              </div>
+            </div>
+
+            <div class="form-row-2">
+              <div class="input">
+                <label for="last-name">Last Name</label><br />
+                <input
+                  type="text"
+                  name="last-name"
+                  id="last-name"
+                  placeholder="Squarepants"
+                  required
+                />
+              </div>
+              <div class="input">
                 <label for="phone-number">Phone Number</label><br />
                 <input
                   type="tel"
@@ -78,25 +87,13 @@
                   required
                 />
               </div>
-            </div>
-
-            <div class="form-row">
-              <div class="input">
-                <label for="password-1">Password</label><br />
-                <input
-                  type="password"
-                  name="password-1"
-                  id="password-1"
-                  required
-                />
-              </div>
 
               <div class="input">
-                <label for="password-confirm">Confirm Password</label><br />
+                <label for="password-2"> Confirm Password</label> <br />
                 <input
                   type="password"
-                  name="password-confirm"
-                  id="password-confirm"
+                  name="password-2"
+                  id="password-2"
                   required
                 />
               </div>
