CSS styling changes. Add validation color changes.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="main-container">
       <div class="left-side">
-        <div class="logo-container">Maui Pineapple Company</div>
+        <div class="logo-container">Maui Pineapples</div>
       </div>
       <div class="right-side">
         <div class="cta">
