Added password validation to include at least 5 characters, at least 1 upper case letter and at least one digit.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                   type="password"
                   name="password-1"
                   id="password-1"
+                  pattern="(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{5,}"
                   required
                 />
               </div>
@@ -94,6 +95,7 @@
                   type="password"
                   name="password-2"
                   id="password-2"
+                  pattern="(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{5,}"
                   required
                 />
               </div>
